--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:binding="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.example.allinone.ip_camera.login.LoginViewModel" />
+            type="com.example.allinone.ipcamera.login.LoginViewModel" />
     </data>
 
     <RelativeLayout
-        android:id="@+id/layoutLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/Blue">
+        android:background="@drawable/login_background">
 
         <ImageView
-            android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="44dp"
-            android:src="@mipmap/lens_720" />
+            android:layout_marginTop="64dp"
+            android:src="@mipmap/camera_logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/icon"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="64dp"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
+            android:paddingLeft="42dp"
+            android:paddingRight="42dp">
 
             <!--select platform-->
-            <Button
-                android:id="@+id/selectPlatform"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginTop="32dp"
-                android:onClick="@{()->viewModel.selectPlatform()}"
-                android:text="@{viewModel.title}" />
+                android:layout_height="42dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="平  台" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4">
+
+                    <!--<TextView-->
+                    <!--android:id="@+id/title"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:clickable="false"-->
+                    <!--android:gravity="center_vertical"-->
+                    <!--android:hint="请选着平台地址"-->
+                    <!--android:padding="5dp"-->
+                    <!--android:text="@{viewModel.title}"-->
+                    <!--android:textColor="@color/textColor"-->
+                    <!--android:textSize="16sp"-->
+                    <!--binding:onClickCommand="@{viewModel.onSelectPlatformClick}"-->
+                    <!--tools:text="浙江幼儿园" />-->
+                    <!--<ImageView-->
+                    <!--android:layout_width="40dp"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:src="@mipmap/sort_down"-->
+                    <!--binding:onClickCommand="@{viewModel.onSelectPlatformClick}" />-->
+
+                    <Spinner
+                        android:id="@+id/platSpinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:dropDownWidth="match_parent"
+                        android:spinnerMode="dropdown"
+                        tools:prompt="Select Platform" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:background="@color/blackAlpha" />
+                </RelativeLayout>
+
+            </LinearLayout>
 
             <!-- Get telephone number automatic -->
             <LinearLayout
@@ -47,7 +94,6 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
-                    android:id="@+id/hpnicon"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -56,25 +102,27 @@
                     android:text="用  户" />
 
                 <EditText
-                    android:id="@+id/configusr"
+                    android:id="@+id/account"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
                     android:imeOptions="actionNext"
                     android:inputType="phone"
                     android:maxLength="11"
-                    tools:text="@{viewModel.account}" />
+                    android:text="@={viewModel.account}"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"
+                    binding:onFocusChangeCommand="@{viewModel.onFocusChangeCommand}"
+                    tools:text="18520860072" />
             </LinearLayout>
 
             <!-- Input new pwd for reset -->
             <LinearLayout
-                android:id="@+id/TablePWD"
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
                 android:layout_marginTop="5dp">
 
                 <TextView
-                    android:id="@+id/pwdicon"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -82,54 +130,65 @@
                     android:gravity="center"
                     android:text="密  码" />
 
-                <EditText
-                    android:id="@+id/configpwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:imeOptions="actionNext"
-                    android:inputType="textPassword|textWebPassword"
-                    android:maxLength="16"
-                    android:selectAllOnFocus="true"
-                    android:text="@{viewModel.passWord}" />
-
-                <FrameLayout
+                <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="bottom"
-                    android:layout_weight="1">
+                    android:layout_weight="4">
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword|textWebPassword"
+                        android:maxLength="16"
+                        android:selectAllOnFocus="true"
+                        android:text="@={viewModel.password}"
+                        android:textColor="@color/textColor"
+                        android:textSize="16sp"
+                        tools:text="sdfkahkfjha" />
 
                     <Switch
                         android:id="@+id/tgb_show_pwd"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginBottom="5dp" />
-                </FrameLayout>
+                        android:layout_marginBottom="5dp"
+                        binding:onCheckedChangeCommand="@{viewModel.onShowPwdSwitchOn}" />
+                </RelativeLayout>
             </LinearLayout>
 
-            <!--login action-->
+            <!--ic_ipcamera action-->
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginTop="5dp"
-                android:text="Login" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/sel_btn_background"
+                android:text="Login"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                binding:onClickCommand="@{viewModel.onLoginClick}" />
 
             <!--other button-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
                 <CheckBox
                     android:id="@+id/btn_savepwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="false"
+                    android:checked="true"
                     android:text="记住密码"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"
+                    binding:onCheckedChangedCommand="@{viewModel.onRememberPwdChange}" />
 
                 <TextView
                     android:id="@+id/btn_help"
@@ -139,21 +198,23 @@
                     android:paddingTop="5dp"
                     android:text="忘记密码？"
                     android:textSize="14sp"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"
+                    binding:onClickCommand="@{viewModel.onForgetPwdClick}" />
             </RelativeLayout>
 
-            <!-- version text_view -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:focusable="false"
-                android:text="1.1.0"
-                android:textColor="#6f000000"
-                android:textSize="12sp" />
-
         </LinearLayout>
+
+        <!-- version text_view -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:focusable="false"
+            android:text="Copyright of TOPVS.Ltd.  -  V7.0.0"
+            android:textColor="#6f000000"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 </layout>
