--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#50D5C7</color>
+    <color name="colorPrimaryCent">#30C0B0</color>
+    <color name="colorPrimaryDark">#10A7A0</color>
+    <color name="colorAccent">#E07040</color>
+    <color name="textColor">#202020</color>
+    <color name="textColorHint">#A0A0A0</color>
+    <color name="textColorVice">#6C6C6C</color>
+    <color name="viewLineColor">#E0E0E0</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="blackAlpha">#70202020</color>
+
+    <color name="grey">#808080</color>
+    <color name="grey_alpha">#60808080</color>
+    <color name="grey_deep">#666666</color>
+    <color name="grey_deep_pro_alpha">#50666666</color>
+    <color name="grey_light">#C0C0C0</color>
+    <color name="grey_light_alpha">#60C0C0C0</color>
+    <color name="grey_light_pro">#F8F8F8</color>
+
+    <color name="plan">#4EB1F2</color>
+    <color name="main">#42b0d2</color>
+    <color name="blue">#345DA4</color>
+    <color name="blue_light_alpha">#5580B9EF</color>
+
+    <color name="brown">#3EC3C8</color>
+
+    <color name="common_red">#F05F4C</color>
 </resources>
