--- a/app/src/main/res/drawable/sel_gr2tr_wh_frame.xml
+++ b/app/src/main/res/drawable/sel_gr2tr_wh_frame.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/grey_light" />
+            <solid android:color="@color/greyLight" />
             <corners android:radius="@dimen/item_radius"/>
         </shape>
     </item>
@@ -17,7 +17,7 @@
 
     <item android:state_enabled="false">
         <shape>
-            <solid android:color="@color/grey_light"/>
+            <solid android:color="@color/greyLight"/>
             <corners android:radius="@dimen/item_radius"/>
         </shape>
     </item>
