--- a/app/src/main/res/drawable/sel_wh2tr_br_frame.xml
+++ b/app/src/main/res/drawable/sel_wh2tr_br_frame.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/blue_light_alpha"/>
+            <solid android:color="@color/colorPrimary"/>
             <corners android:radius="@dimen/item_radius"/>
         </shape>
     </item>
@@ -18,7 +18,7 @@
     <item android:state_enabled="false">
         <shape>
             <stroke android:width="1dp" android:color="@color/brown"/><!--边框颜色-->
-            <solid android:color="@color/grey_light_alpha"/>
+            <solid android:color="@color/greyLightAlpha"/>
             <corners android:radius="@dimen/item_radius"/>
         </shape>
     </item>
