--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,40 +48,34 @@
                     android:layout_height="match_parent"
                     android:layout_weight="4">
 
-                    <!--<TextView-->
-                    <!--android:id="@+id/title"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:clickable="false"-->
-                    <!--android:gravity="center_vertical"-->
-                    <!--android:hint="请选着平台地址"-->
-                    <!--android:padding="5dp"-->
-                    <!--android:text="@{viewModel.title}"-->
-                    <!--android:textColor="@color/textColor"-->
-                    <!--android:textSize="16sp"-->
-                    <!--binding:onClickCommand="@{viewModel.onSelectPlatformClick}"-->
-                    <!--tools:text="浙江幼儿园" />-->
-                    <!--<ImageView-->
-                    <!--android:layout_width="40dp"-->
-                    <!--android:padding="10dp"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:src="@mipmap/sort_down"-->
-                    <!--binding:onClickCommand="@{viewModel.onSelectPlatformClick}" />-->
-
                     <Spinner
                         android:id="@+id/platSpinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@null"
                         android:dropDownWidth="match_parent"
-                        android:spinnerMode="dropdown"
-                        tools:prompt="Select Platform" />
+                        android:dropDownVerticalOffset="32dp"
+                        android:paddingRight="32dp"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:padding="12dp"
+                        android:src="@mipmap/sort_down"
+                        android:tint="@color/textColor" />
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_alignParentBottom="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
+                        android:layout_marginBottom="5dp"
                         android:background="@color/blackAlpha" />
                 </RelativeLayout>
 
