Added PlatformList Screen.

--- a/app/src/main/res/layout/platform_item.xml
+++ b/app/src/main/res/layout/platform_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="platform"
-            type="com.example.allinone.data.login.Platform" />
+            type="com.example.allinone.entity.PlatformEntity" />
     </data>
 
     <LinearLayout
