1. Added ExpandableListView. 2. Added SearchView to camera fragment.

--- a/app/src/main/res/drawable/button_shadow.xml
+++ b/app/src/main/res/drawable/button_shadow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:height="5dp"
+        android:height="6dp"
         android:gravity="bottom">
         <shape android:shape="rectangle">
             <gradient
@@ -14,6 +14,7 @@
 
     <item android:bottom="4dp">
         <shape android:shape="rectangle">
+            <corners android:radius="4dp"/>
             <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
