--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,7 +139,7 @@
                         android:text="@={viewModel.password}"
                         android:textColor="@color/textColor"
                         android:textSize="16sp"
-                        tools:text="sdfkahkfjha" />
+                        tools:text="qzlt2015" />
 
                     <Switch
                         android:id="@+id/tgb_show_pwd"
