--- a/app/src/main/res/drawable/sel_btn_background.xml
+++ b/app/src/main/res/drawable/sel_btn_background.xml
@@ -4,7 +4,7 @@
         <layer-list>
             <item android:top="5dp" android:bottom="5dp" android:left="3dp" android:right="3dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/colorPrimaryCent" />
+                    <solid android:color="@color/colorPrimaryLess" />
                     <corners android:radius="2dp" />
                 </shape>
             </item>
