--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/tv_title"
                 style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:ellipsize="end"
                 android:gravity="center"
@@ -45,12 +45,12 @@
                 android:maxLines="2"
                 android:text="@{toolbarViewModel.titleText}"
                 android:textColor="@color/white"
-                tools:text="This is a test title and it will be long long long long long long title"
-                android:textSize="18sp"
-                binding:onClickCommand="@{toolbarViewModel.titleOnClick}" />
+                binding:onClickCommand="@{toolbarViewModel.titleOnClick}"
+                tools:text="This is a test title and it will be long long long long long long title" />
 
             <TextView
                 android:id="@+id/tv_right_text"
+                style="@style/TextAppearance.AppCompat.Widget.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
@@ -59,10 +59,12 @@
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="@{toolbarViewModel.rightText}"
-                android:textColor="@color/textColor"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 android:visibility="@{toolbarViewModel.rightTextVisibleObservable}"
-                binding:onClickCommand="@{toolbarViewModel.rightTextOnClick}" />
+                binding:onClickCommand="@{toolbarViewModel.rightTextOnClick}"
+                tools:text="right" />
 
             <ImageView
                 android:id="@+id/iv_right_icon"
@@ -78,9 +80,9 @@
                 android:visibility="@{toolbarViewModel.rightIconVisibleObservable}"
                 binding:onClickCommand="@{toolbarViewModel.rightIconOnClick}" />
 
-            <View
-                style="@style/ViewLineStyle"
-                android:layout_alignParentBottom="true" />
+            <View style="@style/ViewLineStyle"
+                android:layout_alignParentBottom="true"/>
         </RelativeLayout>
+
     </androidx.appcompat.widget.Toolbar>
 </layout>
