--- a/app/src/main/res/layout/item_camera_area.xml
+++ b/app/src/main/res/layout/item_camera_area.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <import type="com.example.allinone.entity.AreaEntity" />
+        <import type="com.example.allinone.entity.AreaEntity"/>
 
-        <import type="com.example.allinone.entity.AreaEntity.Checked" />
+        <import type="com.example.allinone.entity.AreaEntity.Checked"/>
 
         <variable
             name="area"
-            type="AreaEntity" />
+            type="AreaEntity"/>
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="42dp"
+        android:background="@drawable/under_line"
         android:gravity="center"
+        android:onClick="@{()->area.toggle()}"
         android:orientation="horizontal">
 
         <CheckBox
@@ -25,7 +27,7 @@
             android:layout_height="32dp"
             android:layout_margin="@dimen/view_padding"
             android:background="@{area.checkedAll == Checked.some ? @drawable/bg_checkbox : null}"
-            android:checked="@{area.checkedAll == Checked.all}" />
+            android:checked="@{area.checkedAll == Checked.all}"/>
 
         <TextView
             android:id="@+id/tvArea"
@@ -36,7 +38,7 @@
             android:text="@{area.name}"
             android:textColor="@color/textColor"
             android:textSize="18dp"
-            tools:text="Area title" />
+            tools:text="Area title"/>
 
         <ImageView
             android:id="@+id/ivArrow"
@@ -44,6 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/view_padding"
             android:rotation="@{area.expanded ? 180 : 0}"
-            android:src="@mipmap/arrow_down" />
+            android:src="@mipmap/arrow_down"/>
     </LinearLayout>
 </layout>
