--- a/app/src/main/res/drawable/bg_under_line.xml
+++ b/app/src/main/res/drawable/bg_under_line.xml
@@ -5,7 +5,7 @@
         android:right="-2px"
         android:top="-2px">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/background" />
             <stroke
                 android:width="2px"
                 android:color="@color/viewLineColor" />
