--- a/app/src/main/res/layout/item_camera_dev.xml
+++ b/app/src/main/res/layout/item_camera_dev.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
-            name="camera"
+            name="model"
             type="com.example.allinone.entity.CameraEntity" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:gravity="center"
+        android:background="@drawable/under_line"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/ivIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/view_padding"
-            android:src="@{camera.icon}" />
+            android:id="@+id/iv_right"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:padding="@dimen/view_padding"
+            app:imageResource="@{model.icon}" />
 
         <TextView
             android:id="@+id/tvCamera"
@@ -28,18 +30,22 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:maxLines="2"
-            android:text="@{camera.name}"
+            android:text="@{model.name}"
             android:textColor="@color/textColor"
-            android:textSize="16dp"
-            tools:text="Area title" />
+            android:textSize="14sp"
+            tools:text="Camera title" />
 
-        <CheckBox
-            android:id="@+id/cbCheck"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_margin="@dimen/view_padding"
-            android:checked="@{camera.checked}"
-            tools:checked="true" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="@dimen/side_padding">
+
+            <ImageView
+                android:id="@+id/iv_left"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                app:imageResource="@{model.checkIcon}"/>
+        </FrameLayout>
 
     </LinearLayout>
 </layout>
