--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="blackAlpha">#70202020</color>
+    <color name="background">#F7F7F7</color>
 
     <color name="grey">#808080</color>
     <color name="greyAlpha">#60808080</color>
