--- a/app/src/main/res/layout/item_camera_area.xml
+++ b/app/src/main/res/layout/item_camera_area.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View" />
 
         <variable
             name="model"
@@ -12,45 +14,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/bg_under_line"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_right"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:padding="@dimen/side_padding"
-            android:rotation="@{model.expanded ? 180 : 270}"
-            android:src="@mipmap/arrow_down"
-            tools:rotation="270" />
-
-        <TextView
-            android:id="@+id/area_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:maxLines="2"
-            android:text="@{model.name}"
-            android:textColor="@color/textColor"
-            android:textSize="20sp"
-            tools:text="Area title" />
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="@dimen/side_padding">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/background"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingRight="@dimen/side_padding">
 
             <ImageView
                 android:id="@+id/iv_left"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                app:imageResource="@{model.checkIcon}"/>
-                <!--android:src="@drawable/ic_check_all" -->
-        </FrameLayout>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="@dimen/view_padding"
+                android:rotation="@{model.expanded ? 180 : 270}"
+                android:src="@mipmap/arrow_down"
+                android:tint="@color/textColorHint"
+                tools:rotation="270" />
 
+            <TextView
+                android:id="@+id/area_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLines="2"
+                android:text="@{model.name}"
+                android:textColor="@color/textColorVice"
+                android:textSize="14sp"
+                tools:text="Area title" />
+
+            <ImageView
+                android:id="@+id/iv_right"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_marginRight="2dp"
+                app:imageResource="@{model.checkIcon}"
+                tools:src="@drawable/ic_check_bg" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/view_padding"
+            android:background="@color/white"
+            android:visibility="@{model.expanded ? View.GONE : View.VISIBLE}" />
     </LinearLayout>
-
 
 </layout>
