--- a/app/src/main/res/layout/item_camera_dev.xml
+++ b/app/src/main/res/layout/item_camera_dev.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
@@ -10,19 +8,23 @@
             type="com.example.allinone.entity.CameraEntity" />
     </data>
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:background="@drawable/under_line"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingRight="@dimen/side_padding">
 
         <ImageView
-            android:id="@+id/iv_right"
+            android:id="@+id/iv_left"
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:padding="@dimen/view_padding"
-            app:imageResource="@{model.icon}" />
+            app:imageResource="@{model.icon}"
+            tools:src="@mipmap/ic_camera" />
 
         <TextView
             android:id="@+id/tvCamera"
@@ -35,17 +37,12 @@
             android:textSize="14sp"
             tools:text="Camera title" />
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="@dimen/side_padding">
-
-            <ImageView
-                android:id="@+id/iv_left"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                app:imageResource="@{model.checkIcon}"/>
-        </FrameLayout>
+        <ImageView
+            android:id="@+id/iv_right"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            app:imageResource="@{model.checkIcon}"
+            tools:src="@drawable/ic_check" />
 
     </LinearLayout>
 </layout>
