--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="item_radius">3dp</dimen>
 
     <dimen name="spacing_medium">8dp</dimen>
+    <dimen name="line_width">2px</dimen>
 
 
 </resources>
