1. Add ObjectBox ORM. 2. Add Platforms ListView and add entrance in Login screen.

--- a/app/src/main/res/layout/fragment_alarms.xml
+++ b/app/src/main/res/layout/fragment_alarms.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:stretchColumns="*"
-            app:entries="@{viewModel.alarms}"
-            app:layout="@{viewModel.layout}" />
+            app:dataList="@{viewModel.alarms}"
+            app:itemLayout="@{viewModel.layout}" />
 
     </ScrollView>
 
