--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -28,7 +28,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:background="?selectableItemBackground"
-                android:padding="18dp"
+                android:padding="@dimen/side_padding"
                 android:src="@mipmap/ic_back"
                 android:tint="@color/white"
                 binding:onClickCommand="@{toolbarViewModel.leftIconOnClick}" />
@@ -57,7 +57,7 @@
                 android:layout_centerVertical="true"
                 android:background="?selectableItemBackground"
                 android:gravity="center"
-                android:padding="12dp"
+                android:padding="@dimen/side_padding"
                 android:text="@{toolbarViewModel.rightText}"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -74,7 +74,7 @@
                 android:layout_centerVertical="true"
                 android:background="?selectableItemBackground"
                 android:gravity="center"
-                android:padding="12dp"
+                android:padding="@dimen/side_padding"
                 android:src="@mipmap/toolbar_more"
                 android:tint="@color/white"
                 android:visibility="@{toolbarViewModel.rightIconVisibleObservable}"
