--- a/app/src/main/res/layout/layout_play_bar.xml
+++ b/app/src/main/res/layout/layout_play_bar.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="player"
-            type="android.media.MediaPlayer" />
+            name="playbar"
+            type="com.example.allinone.ui.main.PlaybarViewModel"/>
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/greyLighterAlpha"
+        android:background="@color/white"
         android:orientation="horizontal"
         tools:showIn="@layout/fragment_main">
 
@@ -29,35 +30,40 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_vertical_margin"
                 android:paddingTop="@dimen/view_padding"
-                android:paddingBottom="@dimen/view_padding"
+                android:text="@{playbar.trackTitle}"
                 android:textColor="@color/gre_press_bro_disgre"
                 android:textSize="@dimen/text_font_normal"
-                tools:text="我本人 - 吴雨霏" />
+                tools:text="我本人 - 吴雨霏"/>
 
             <SeekBar
                 android:id="@+id/playSeekBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="100"
-                android:maxHeight="3dp"
-                android:minHeight="2dp"
+                android:maxHeight="32dp"
+                android:minHeight="24dp"
+                android:onProgressChanged="@{playbar::onProgressChanged}"
+                android:progress="@{safeUnbox(playbar.curProgress)}"
                 android:progressDrawable="@drawable/bg_seek_bar"
                 android:thumb="@color/brownLightAlpha"
-                tools:progress="50" />
+                tools:progress="50"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/view_padding">
+                android:layout_marginBottom="@dimen/view_padding"
+                android:layout_marginLeft="@dimen/view_padding"
+                android:layout_marginRight="@dimen/view_padding">
 
                 <TextView
                     android:id="@+id/ctrlCurTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="00:00"
+                    android:text="@{playbar.curTime}"
                     android:textColor="@color/textGrey"
-                    android:textSize="@dimen/text_font_small" />
+                    android:textSize="@dimen/text_font_small"
+                    tools:text="00:00"/>
 
                 <TextView
                     android:id="@+id/ctrlTotalTime"
@@ -65,9 +71,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:text="@{String.valueOf(player.duration)}"
+                    android:text="@{playbar.duration}"
                     android:textColor="@color/textGrey"
-                    android:textSize="@dimen/text_font_small" />
+                    android:textSize="@dimen/text_font_small"
+                    tools:text="00:00"/>
             </RelativeLayout>
         </LinearLayout>
 
@@ -82,16 +89,18 @@
                 android:id="@+id/miniCtrlPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="@{()->playbar.onPlayButtonClick()}"
                 android:padding="@dimen/side_padding"
-                android:src="@drawable/ic_mini_play" />
+                android:src="@{playbar.isPlaying ? @drawable/ic_mini_pause : @drawable/ic_mini_play}"/>
 
             <ImageView
                 android:id="@+id/miniCtrlNext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:onClick="@{()->playbar.onPlayNextClick()}"
                 android:paddingRight="@dimen/side_padding"
-                android:src="@drawable/ic_mini_next" />
+                android:src="@drawable/ic_mini_next"/>
         </LinearLayout>
 
     </RelativeLayout>
